project1/test/test_11711111_4.out
Error type A at Line 11: unknown lexeme '\xt0'
Error type A at Line 12: unknown lexeme 0X5Aax
Error type A at Line 13: unknown lexeme 0ok
Error type B at Line 14: Missing semicolon ';'
