project1/test/test_11711111_4.spl
int a;
int b;
int d;
char c;
int;
float;
char;

int main(char arg1[32], char arg2, int arg3[3][4][5][66666]) {
    int i = 0xfff;
    char o = '\xt0';
    int t = 0X5Aax;
    int 0ok = 0;
    (i) = 0xaaa
    return really_main();
}

int lalala[3][4][5][666];
float hahaha;
char nanana[32];

int really_main() {
    int return_value = main(nanana, c, lalala);
    return return_value;
}
